add info to report page / delete unused script

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -76,7 +76,7 @@
 
 </div>
 
-<script src="{% static 'blog/scripts.js' %}"></script>
+{#<script src="{% static 'blog/scripts.js' %}"></script>#}
 </body>
 
 </html>
