--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -41,6 +41,9 @@
 
 
         <ul class="navbar-right">
+            <a href="{% url 'blog:collections' %}">
+                <span>collections</span>
+            </a>
             {% if user.is_authenticated %}
                 <a href="{% url 'blog:following' %}">
                     <span>following posts</span>
@@ -60,6 +63,7 @@
                 {% endif %}
 
             {% else %}
+
                 <a href="{% url 'blog:login' %}" class="btn-login">Sign in</a>
                 <a href="{% url 'blog:register' %}">
                     <button class="btn-nav btn-register">Get started</button>
