--- a/blog/templates/blog/base_paginated.html
+++ b/blog/templates/blog/base_paginated.html
@@ -16,6 +16,7 @@
                         <div class="date">
                             <p>by
                                 <a href="{% url 'blog:profile' pk=post.author.pk %}">{{ post.author }}</a>
+{#                                {% if post.publication %} for {{ post.publication }} {% endif %}#}
                                 on {{ post.created_date|date|striptags }}</p>
                         </div>
                         <div class="tags">
