--- a/blog/templates/blog/new_collection.html
+++ b/blog/templates/blog/new_collection.html
@@ -12,7 +12,10 @@
 {% block content %}
 
 <form class="post-form" method="post" enctype="multipart/form-data" "post_form">
-    {% csrf_token %}{{form.image}} {{form.title}} {{form.info}}
+    {% csrf_token %}
+    {{form.image}}
+    {{form.title}}
+    info: {{form.info}}
 
     <button type="submit" class="save btn btn-default">Save</button>
 </form>
