--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -74,6 +74,7 @@
     </div>
 
 </nav>
+{% block title %} {% endblock %}
 {% block featured %} {% endblock %}
 <div class="container">
     {% block content %} {% endblock %}
