--- a/blog/templates/blog/publication.html
+++ b/blog/templates/blog/publication.html
@@ -1,28 +1,38 @@
-{% extends 'blog/base.html' %}{% load extras %} {% block content %} 
-    
-    
+{% extends 'blog/base.html' %}{% load extras %} {% block content %}
+
+
     {% if publication.image %}
-    <img id="featured" src="{{ publication.image.url }}" alt="your image"/>{% else %} {% endif %}
-    <h1>{{ publication.name }} 
-        
+        <img id="featured" src="{{ publication.image.url }}" alt="your image"/>{% else %} {% endif %}
+    <h1>{{ publication.name }}
+
         {% if user.is_authenticated and publication.creator == user %}
-        <span class="collection-edit-publish-links">
+            <span class="collection-edit-publish-links">
         <a href="{% url 'blog:edit_publication' pk=publication.pk %}">Edit</a> |
         <a href="{% url 'blog:delete_publication' pk=publication.pk %}">Delete</a>
-        </span> 
+        <a href="{% url 'blog:add_author' publication_pk=publication.pk %}">Add Author</a>
+        </span>
+        {% endif %}
+        {% if user.is_authenticated and user in publication.authors.all %}
+            <a href="{% url 'blog:publication_new_post' publication_pk=publication.pk %}">New Post</a>
+            {% if user.pk != publication.creator.pk %}
+                <a href="{% url 'blog:remove_author' publication_pk=publication.pk user_pk=user.pk %}">Leave Authorship</a>
+            {% endif %}
         {% endif %}
     </h1>
+    <p><a href="{% url 'blog:author_list' publication_pk=publication.pk %}">Authors</a></p>
     <div class="like">
-            {% if publication.pk|already_followed_publication:user %}
-                <a href="{% url 'blog:unfollow_publication' publication_pk=publication.pk %}">Unfollow
-            {% else %}
-                <a href="{% url 'blog:follow_publication' publication_pk=publication.pk %}">Follow
-            {% endif %}
+        {% if publication.pk|already_followed_publication:user %}
+            <a href="{% url 'blog:unfollow_publication' publication_pk=publication.pk %}">Unfollow
+        {% else %}
+            <a href="{% url 'blog:follow_publication' publication_pk=publication.pk %}">Follow
+        {% endif %}
 
         </a>
-        <span> {{ publication.followers.count }}</span>
     </div>
-
+    <div><p>
+        <a href="{% url 'blog:publication_followers' pk=publication.pk %}">Followers</a>
+        <span> {{ publication.followers.count }}</span>
+    </p></div>
     <p>by
         <a href="{% url 'blog:profile' pk=publication.creator.pk %}">{{ publication.creator }}</a>
         <br>{% if publication.published_date %} on {{ publication.published_date|date }}{% endif %}
