remove title block

--- a/blog/templates/blog/base_paginated.html
+++ b/blog/templates/blog/base_paginated.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %} {% block content %}
     
-{% block title %} {% endblock %}
+{#{% block title %} {% endblock %}#}
     <div class="row">
         <div class="col-md-8">
             {% if posts_list %}
