--- a/blog/templates/blog/profile_edit.html
+++ b/blog/templates/blog/profile_edit.html
@@ -4,7 +4,11 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group">
-        {{user_form.as_p}}
+        <p>{{user_form.email}}</p>
+        <p>{{user_form.first_name}}</p>
+        <p>{{user_form.last_name}}</p>
+        <p>{{user_form.birthdate}}</p>
+        <p>{{user_form.avatar}}</p>
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
